--- a/02_endpoints.yaml
+++ b/02_endpoints.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  annotations:
   labels:
     app.kubernetes.io/instance: neshc
     app.kubernetes.io/managed-by: Helm
@@ -9,7 +8,7 @@ metadata:
     app.kubernetes.io/version: "1.0"
     helm.sh/chart: healing-controller-7.11.3
   name: healing-controller
-  namespace: cran2
+  namespace: cran2testing
   ports:
   - name: grpc-server
     port: 50057
