--- a/03_service.yaml
+++ b/03_service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   annotations:
     meta.helm.sh/release-name: neshc
-    meta.helm.sh/release-namespace: cran2testing
+    meta.helm.sh/release-namespace: cran2
   labels:
     app.kubernetes.io/instance: neshc
     app.kubernetes.io/managed-by: Helm
